--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,13 +69,13 @@ jobs:
 
       - name: Bundle files
         run: |
-          mkdir -p ./temp/ox_inventory
-          mkdir -p ./temp/ox_inventory/web
-          cp ./{server.lua,README.md,LICENSE,fxmanifest.lua,client.lua} ./temp/ox_inventory
-          cp -r ./{setup,modules,data,locales} ./temp/ox_inventory
-          cp -r ./web/build ./temp/ox_inventory/web/build
-          cp -r ./web/images ./temp/ox_inventory/web/images
-          cd ./temp && zip -r ../ox_inventory.zip ./ox_inventory
+          mkdir -p ./temp/legendsInventory
+          mkdir -p ./temp/legendsInventory/web
+          cp ./{server.lua,README.md,LICENSE,fxmanifest.lua,client.lua} ./temp/legendsInventory
+          cp -r ./{setup,modules,data,locales} ./temp/legendsInventory
+          cp -r ./web/build ./temp/legendsInventory/web/build
+          cp -r ./web/images ./temp/legendsInventory/web/images
+          cd ./temp && zip -r ../legendsInventory.zip ./legendsInventory
 
       - name: Create Release
         uses: "marvinpinto/action-automatic-releases@v1.2.1"
@@ -84,7 +84,7 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           title: "${{ env.RELEASE_VERSION }}"
           prerelease: false
-          files: ox_inventory.zip
+          files: legendsInventory.zip
 
         env:
           CI: false
